tests/semantic/comp_clauses/comp_clauses.err
Error: Relation expects value of type number but got argument of type symbol in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--^----------------------------------------------------
Error: Non-symbolic argument for functor, instead argument has type number in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
------^------------------------------------------------
Error: Non-symbolic argument for functor, instead argument has type number in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--------^----------------------------------------------
3 errors generated, evaluation aborted
